WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209014
[ANGLE] Source/ThirdParty/ANGLE/src/common/utilities.cpp:10: warning: ignoring #pragma clang diagnostic [-Wunknown-pragmas]
https://bugs.webkit.org/show_bug.cgi?id=209014
Summary
[ANGLE] Source/ThirdParty/ANGLE/src/common/utilities.cpp:10: warning: ignorin...
Michael Catanzaro
Reported
2020-03-12 13:18:13 PDT
ANGLE is using #pragma clang diagnostic outside of clang guards: [214/1919] Building CXX object Source/...s/ANGLE.dir/src/common/utilities.cpp.o /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/utilities.cpp:10: warning: ignoring #pragma clang diagnostic [-Wunknown-pragmas] 10 | #pragma clang diagnostic ignored "-Wglobal-constructors" | All uses need to be guarded properly. GCC will warn whenever it sees another compiler's pragma.
Attachments
Patch
(2.15 KB, patch)
2020-03-12 13:40 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2020-03-12 13:33:10 PDT
It's a downstream WebKit problem, added in our changes.diff: diff --git a/src/common/utilities.cpp b/src/common/utilities.cpp index 87932a53f..83ea168e2 100644 --- a/src/common/utilities.cpp +++ b/src/common/utilities.cpp @@ -6,6 +6,9 @@ // utilities.cpp: Conversion functions and other utility routines. +// Older clang versions have a false positive on this warning here. +#pragma clang diagnostic ignored "-Wglobal-constructors" + #include "common/utilities.h" #include <GLSLANG/ShaderVars.h> #include "GLES3/gl3.h"
Michael Catanzaro
Comment 2
2020-03-12 13:40:04 PDT
Created
attachment 393408
[details]
Patch
EWS Watchlist
Comment 3
2020-03-12 13:41:10 PDT
Note that there are important steps to take when updating ANGLE. See
http://trac.webkit.org/wiki/UpdatingANGLE
WebKit Commit Bot
Comment 4
2020-03-15 19:08:24 PDT
Comment on
attachment 393408
[details]
Patch Clearing flags on attachment: 393408 Committed
r258484
: <
https://trac.webkit.org/changeset/258484
>
WebKit Commit Bot
Comment 5
2020-03-15 19:08:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2020-03-15 19:09:17 PDT
<
rdar://problem/60478777
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug