[ANGLE] Source/ThirdParty/ANGLE/src/common/utilities.cpp:10: warning: ignoring #pragma clang diagnostic [-Wunknown-pragmas] https://bugs.webkit.org/show_bug.cgi?id=209014

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-03-15
Reviewed by Darin Adler.

Silence compiler warning.

* changes.diff:
* src/common/utilities.cpp:

Canonical link: https://commits.webkit.org/222026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258484 268f45cc-cd09-0410-ab3c-d52691b4dbfc